# nophp-rs

./: .gitignore  Cargo.toml  LICENSE  README.md  build.rs  nophp.php
.cargo/: config.toml
lexer/: Cargo.toml  build.rs
lexer/examples/: test.rs
lexer/grammar/: nophp.pest
lexer/src/: lexer.rs  lib.rs
lexer/tests/: mod.rs  nophp.php  old.pest
macros/: Cargo.toml
macros/src/: lib.rs
nophp/: Cargo.toml  build.rs
nophp/src/: compiler.rs  lexer.rs  lexer_old.rs  lib.rs  main.rs  prelude.rs
nophp/src/modules/: concat.rs  conditional.rs  identifier.rs  mod.rs  resolut.rs  variable.rs
nophp/src/test/: mod.rs
server/: Cargo.toml
server/src/: main.rs
src/: lexer.rs  main.rs
src/modules/: concat.rs  resolut.rs
