[package]
name = "nophp"
version = "0.1.0"
edition = "2021"

[profile.dev.package.pyo3]
opt-level = 3

[profile.dev.package.backtrace]
opt-level = 3

[dependencies]
clap = { version = "4.5.4", features = ["derive"] }
color-eyre = "0.6.3"
nophp_derive = { path = "./macros" }
pyo3 = { version = "0.21.1", features = ["auto-initialize"] }
pythonize = "0.21.1"
serde = { version = "1.0.197", features = ["derive"] }
serde_json = "1.0.115"

# NoPHP default server
http-body-util = "0.1.1"
hyper = { version = "1.2.0", features = ["full"] }
hyper-util = { version = "0.1.3", features = ["full"] }
tokio = { version = "1.37.0", features = ["full"] }

[build-dependencies]
reqwest = { version = "0.12", features = ["blocking"] }
