[package]
name = "lexer"
version = "0.1.0"
edition = "2021"
# this is where I will isloate all the lexer code
# what comes out of this will be a very standardised
# interface. This is to stop the problem of unwraping
# every line when using serde_json::Value

[dependencies]
log = "0.4.21"
pyo3 = { version = "0.21.1", features = ["auto-initialize"] }
pythonize = "0.21.1"
serde = { version = "1.0.197", features = ["derive"] }
serde_json = "1.0.115"

pest = "2.7"
pest_derive = "2.7"

[build-dependencies]
reqwest = { version = "0.12", features = ["blocking"] }
