[package]
name = "nophp"
version = "0.1.0"
edition = "2021"

[lints.rust]
unsafe_code = "forbid"

[lints.clippy]
get_first = "allow"

[dependencies]
clap = { version = "4.5.4", features = ["derive"] }
color-eyre = "0.6.3"
pyo3 = { version = "0.21.1", features = ["auto-initialize"] }
pythonize = "0.21.1"
serde = { version = "1.0.197", features = ["derive"] }
serde_json = "1.0.115"

nophp_derive = { path = "../macros" }
thiserror = "1.0.58"

[build-dependencies]
reqwest = { version = "0.12", features = ["blocking"] }
