[package]
name = "nophp"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = { version = "4.5.4", features = ["derive"] }
color-eyre = "0.6.3"
pyo3 = { version = "0.21.1", features = ["auto-initialize"] }
pythonize = "0.21.1"
serde = { version = "1.0.197", features = ["derive"] }
serde_json = "1.0.115"
thiserror = "1.0.58"

env_logger = "0.11.3"
log = "0.4.21"

nophp_derive = { path = "../macros" }
lexer = { path = "../lexer" }

[build-dependencies]
reqwest = { version = "0.12", features = ["blocking"] }
